--- a/03-comp/123.md
+++ b/03-comp/123.md
@@ -42,4 +42,4 @@
 
 ## 结论
 
-到这里，《 Web3.0 架构》的主线就介绍给各位了，总结起来就是”一个目标，两种技术，三个角度“。“一个目标”指的是”数据确权“，有了明确的目标才能知道技术上要做哪些选型，哪些方面能妥协，哪些不能妥协。”两种技术“是 Web 和区块链。Web 纵然有种种不足，但它是几十年来人人互联的主要方式，真金白银的投入带来的基础，不可能一下推翻。同时，对云计算这种中心化架构和对中心的信任的依赖必须推翻，取而代指的只可能是去中心化的信任，目前区块链是实现去中心化信任的最佳技术。”三个角度“指的是：去中心化，去信任化和数字空间独立。
+到这里，本书的内容主线就介绍给各位了，总结起来就是”一个目标，两种技术，三个角度“。“一个目标”指的是”数据确权“，有了明确的目标才能知道技术上要做哪些选型，哪些方面能妥协，哪些不能妥协。”两种技术“是 Web 和区块链。Web 纵然有种种不足，但它是几十年来人人互联的主要方式，真金白银的投入带来的基础，不可能一下推翻。同时，对云计算这种中心化架构和对中心的信任的依赖必须推翻，取而代指的只可能是去中心化的信任，目前区块链是实现去中心化信任的最佳技术。”三个角度“指的是：去中心化，去信任化和数字空间独立。
