--- a/03-comp/123.md
+++ b/03-comp/123.md
@@ -1,12 +1,11 @@
-在2020年这个时间点上，每个人对 Web3.0 的理解都可能略有不同。本书会按照怎样的思路构建整个技术体系呢？具体来说就是，Web3.0 要解决的最大的一个问题是什么呢？又要选用什么技术，从哪些角度来解决这个问题呢？
+在2021年这个时间点上，每个人对 Web3.0 的理解都可能略有不同。本书会按照怎样的思路构建整个技术体系呢？具体来说就是，Web3.0 要解决的最大的一个问题是什么呢？又要选用什么技术，从哪些角度来解决这个问题呢？
 
 ## 一个目标
-
-不错，技术是用来解决人们的问题的。Web1.0 出现解决的如何是用统一的格式方便的分享信息。Web2.0 解决人和人之间的如何在线交互。那么 Web3.0 的核心目标是什么呢？
+技术是用来解决问题的。Web1.0 出现解决的如何是用统一的格式方便的分享信息。Web2.0 解决人和人之间的如何在线交互。那么 Web3.0 的目标也应该是解决一个问题。
 
 首先，Web3.0 的目标必须简短清晰，这样才能形成全球共识。网上有观点认为，互联网目前最大的问题是数据寡头垄断，所以 Web3.0 的目的是要用去中心化技术干掉互联网巨头。思路并没有错，但是作为工程师，我们的答案不是要干掉什么，而是要建设什么。本书认为 ”数据确权“，也就是把数据当做一种资产并且产权归个人，是 Web3.0 的最核心的目标。只要实现了”数据确权“，所谓的数据寡头，数据孤岛，隐私等等这些 Web2.0 的问题也都会迎刃而解。注意在整个过程中，去摧毁谁不是目的，如果某些巨头能够推动这个目标，我也支持这些巨头。
 
-当然，Web 是全球人的，不同的人有不同的目标，本书只是去瞄准最核心的一个。例如，Web1.0 的目的是分享，根本没有考虑过安全。但是网景公司，非要在 Web1.0 的不安全的基础上去努力构建一个安全的通信机制，于是 HTTPS 被发明出来了，人们从此可以放心的在网站上填写自己的信用卡信息了。Web2.0 并不是为隐私而生的，整个的架构是云计算的中心化的架构，人和人之间的交互要基于对第三方平台的信任。但是也有人要在上面去构建隐私的互联网，例如，洋葱网络 TOR 。Web 是覆盖全球的大系统，不同的目标可以保留多种可能，催生下一代 Web 的诞生。但是核心的愿景在一段时期内，肯定只有一个，本书会围绕一个目标来聊，保证主线清晰。
+当然，Web 是属于全球人的，不同的人有不同的目标，本书只是去瞄准最核心的一个。例如，Web1.0 的目的是分享，根本没有考虑过安全。但是网景公司，非要在 Web1.0 的不安全的基础上去努力构建一个安全的通信机制，于是 HTTPS 被发明出来了，人们从此可以放心的在网站上填写自己的信用卡信息了。Web2.0 并不是为隐私而生的，整个的架构是云计算的中心化的架构，人和人之间的交互要基于对第三方平台的信任。但是也有人要在上面去构建隐私的互联网，例如，洋葱网络 TOR 。Web 是覆盖全球的大系统，不同的目标可以保留多种可能，催生下一代 Web 的诞生。但是核心的愿景在一段时期内，肯定只有一个，本书会围绕这个目标来聊，保证主线清晰。
 
 而 Web3.0 的核心目标就是：数据确权。
 
@@ -36,10 +35,10 @@
 
 第二个角度是去信任化。如果仅仅是为了更好的分享，去掉中心是相对比较容易的。例如，Web 之父 Tim Berners-Lee 的语义网以及 Solid 项目，都是可以做到的。但是 Web 发展到2.0阶段之所以能够腾飞，是因为 Web 承载起了经济活动，或者说尊重了私人商业利益。但是有利益，也就有了欺诈。例如，我自己存储了一个对淘宝商品的评论，注明了我在什么时间，评论了什么。注意这样的评论是跟私人商业利益紧密相关的，所以我完全有动机去篡改时间或者评论内容。没有了平台公司提供的信任，谁来保证用户没有篡改自己的数据呢？有人说，Web3.0 是“可信互联网”，而信任的基础就是区块链提供的不被单一方把持的数据。区块链的不可篡改，加上数字签名这样的密码学方法，可以提供经济活动所需的信任。
 
-第三个角度是数字空间独立。Web 不可能再回到刚诞生时候的那种纯洁的以分享为目的的状态了，因为 Web2.0 重塑了经济，人们尝到了甜头，不可能再退回去。但是 Web2.0 上面几乎没有独立的数字经济，而通常都只是肉身世界的经济的入口。很多时候 Web2.0 的低效率就来源于跟肉身世界的绑定，造成很多过程是不能自动化的。而且全球化的时代，Web 作为一个天然全球化的存在，却被出自不同地域和文化背景的规范所约束，带来了各种贸易上的摩擦。现在，区块链带来了不可篡改的数据和加密货币，带来了不依赖地域文化而是基于数学规则来解决商业争端和支付的能力，所以让构建一个全球化的，承载独立数字经济的独立数字空间成为了可能。
+第三个角度是数字空间独立。Web 不可能再回到刚诞生时候的那种纯洁的以分享为目的的状态了，因为 Web2.0 重塑了经济，人们尝到了甜头，不可能再退回去。但是 Web2.0 上面几乎没有独立的数字经济，而通常都只是肉身世界的经济的入口。很多时候 Web2.0 的低效率就来源于跟肉身世界的绑定，造成很多过程是不能自动化的。而且全球化的时代，Web 作为一个天然全球化的存在，却被出自不同地域和文化背景的规范所约束，带来了各种贸易上的摩擦。现在，区块链带来了不可篡改的数据和加密货币，带来了不依赖地域文化而是基于数学规则来解决商业争端和支付的能力，所以让构建一个全球化的，承载数字经济的独立数字空间成为了可能。
 
 这就是本书中要展开阐述的 Web3.0 的三个发展角度：去中心化，去信任化，和数字空间独立。
 
 ## 结论
 
-到这里，Web3.0 架构的大思路就介绍给各位了，总结起来就是”一个目标，两种技术，三个角度“。“一个目标”指的是”数据确权“，有了明确的目标才能知道技术上要做哪些选型，哪些方面能妥协，哪些不能妥协。”两种技术“是 Web 和区块链。Web 纵然有种种不足，但它是几十年来人人互联的主要方式，真金白银的投入带来的基础，不可能一下推翻。同时，对云计算这种中心化架构和对中心的信任的依赖必须推翻，却而代之的只可能是去中心化的信任，目前区块链是实现去中心化信任的最佳技术。”三个角度“指的是：去中心化，去信任化和数字空间独立。
+到这里，Web3.0 架构的大思路就介绍给各位了，总结起来就是”一个目标，两种技术，三个角度“。“一个目标”指的是”数据确权“，有了明确的目标才能知道技术上要做哪些选型，哪些方面能妥协，哪些不能妥协。”两种技术“是 Web 和区块链。Web 纵然有种种不足，但它是几十年来人人互联的主要方式，真金白银的投入带来的基础，不可能一下推翻。同时，对云计算这种中心化架构和对中心的信任的依赖必须推翻，取而代之的只可能是去中心化的信任，目前区块链是实现去中心化信任的最佳技术。”三个角度“指的是：去中心化，去信任化和数字空间独立。
